# robotics_spot

./: build.bat
docker/: Dockerfile  Dockerfile.gzweb  docker-compose.yml
rs_description/launch/: description.launch
rs_inverse/: CMakeLists.txt
rs_inverse/launch/: inverse.launch
rs_inverse/scripts/: gui_spot.py  inverse.sh
rs_remote/: CMakeLists.txt  package.xml
rs_remote/launch/: remote.launch
